--- a/short-answers/q2.md
+++ b/short-answers/q2.md
@@ -4,6 +4,22 @@ In a code snippet, demonstrate inheritance by creating two classes where one is 
 In your code example, create an instance of the child class and reference/invoke a property/method of the parent class.
 
 # Answer
+class Pet {
+  constructor(name,type){
+    this.name = name
+    this.type = type
+  }
+}
 
+class Owner {
+  pets = []
+  constructor(name){
+    this.name = name
+    this.petName = petName
+  }
+  addPet(pet){
+    this.pets.push(new Pet(pet, this.petName))
+  }
+}
 
 # Teacher Feedback
