--- a/short-answers/q3.md
+++ b/short-answers/q3.md
@@ -2,6 +2,18 @@
 What is polymorphism? Show an example in a code snippet.
 
 # Answer
+Polymorphism is when a class takes a method or function from a parent class. You can inherent methods from a parent class and use it for a sub class.
 
+class Pet {
+  speak(){
+    console.log('the pet speaks')
+  }
+}
+
+class Dog extends Pet {
+
+}
+
+Dog.speak() // logs 'the pet speaks'
 
 # Teacher Feedback
