--- a/short-answers/q1.md
+++ b/short-answers/q1.md
@@ -2,6 +2,6 @@
 What's the difference between an `instance` method and a `class` method?
 
 # Answer
-
+An `instance` method is a function that belongs to a class and can access instances within and a `class` method uses `static` to make the method belong to the class and cannot access instance attributes.
 
 # Teacher Feedback
