--- a/short-answers/q2.md
+++ b/short-answers/q2.md
@@ -9,17 +9,18 @@ class Pet {
     this.name = name
     this.type = type
   }
+  speak(sound){
+    console.log(sound)
+  }
 }
 
-class Owner {
-  pets = []
+class Dog extends Pet {
   constructor(name){
-    this.name = name
-    this.petName = petName
-  }
-  addPet(pet){
-    this.pets.push(new Pet(pet, this.petName))
+    super(name,type)
   }
 }
+
+const puppy = new Dog('cranberry','dog)
+puppy.speak('woof') // logs 'woof'
 
 # Teacher Feedback
