--- a/short-answers/q2.md
+++ b/short-answers/q2.md
@@ -20,7 +20,7 @@ class Dog extends Pet {
   }
 }
 
-const puppy = new Dog('cranberry','dog)
+const puppy = new Dog('cranberry','dog')
 puppy.speak('woof') // logs 'woof'
 
 # Teacher Feedback
