--- a/short-answers/q3.md
+++ b/short-answers/q3.md
@@ -2,16 +2,22 @@
 What is polymorphism? Show an example in a code snippet.
 
 # Answer
-Polymorphism is when a class takes a method or function from a parent class. You can inherent methods from a parent class and use it for a sub class.
+Polymorphism is when a class takes (inherits) a method or function from a parent class. You can inherit methods and properties from a parent class and use it for a sub class.
 
 class Pet {
+  constructor(name,type){
+    this.name = name
+    this.type = type
+  }
   speak(){
     console.log('the pet speaks')
   }
 }
 
 class Dog extends Pet {
-
+  constructor(name){
+      super(name,type)
+    }
 }
 
 Dog.speak() // logs 'the pet speaks'
