--- a/short-answers/q1.md
+++ b/short-answers/q1.md
@@ -2,6 +2,12 @@
 What's the difference between an `instance` method and a `class` method?
 
 # Answer
-An `instance` method is a function that belongs to a class and can access instances within and a `class` method uses `static` to make the method belong to the class and cannot access instance attributes.
+An `instance` method is a function that belongs to a class and can access instances within and a `class` method uses `static` to make the method belong to the class ~~and cannot access instance attributes~~.
 
 # Teacher Feedback
+
+You are correct in that we need to use static to make a class method.
+
+ We call instance methods on instances that need to first be created, after creation then we can invoke those instance methods. Class methods can be called on the class directly!
+
+Score: 2/3
