--- a/short-answers/q2.md
+++ b/short-answers/q2.md
@@ -4,6 +4,7 @@ In a code snippet, demonstrate inheritance by creating two classes where one is 
 In your code example, create an instance of the child class and reference/invoke a property/method of the parent class.
 
 # Answer
+```js
 class Pet {
   constructor(name,type){
     this.name = name
@@ -22,5 +23,10 @@ class Dog extends Pet {
 
 const puppy = new Dog('cranberry','dog')
 puppy.speak('woof') // logs 'woof'
+```
 
 # Teacher Feedback
+
+Perfect!
+
+Score: 3/3
