--- a/short-answers/q3.md
+++ b/short-answers/q3.md
@@ -2,8 +2,9 @@
 What is polymorphism? Show an example in a code snippet.
 
 # Answer
-Polymorphism is when a class takes (inherits) a method or function from a parent class. You can inherit methods and properties from a parent class and use it for a sub class.
+Polymorphism is when a class takes (inherits) a method or function from a parent class. You can inherit methods and properties from a parent class and use it for a subclass.
 
+```js
 class Pet {
   constructor(name,type){
     this.name = name
@@ -21,5 +22,37 @@ class Dog extends Pet {
 }
 
 Dog.speak() // logs 'the pet speaks'
+```
 
 # Teacher Feedback
+
+So close! One core part is missing and its that the implementation is different! Look at the example below!
+
+```js
+class Pet {
+  constructor(name,type){
+    this.name = name
+    this.type = type
+  }
+  speak(){
+    console.log('the pet speaks')
+  }
+}
+
+class Dog extends Pet {
+  constructor(name,type){
+      super(name,type)
+  }
+
+  speak(){
+    console.log("I am a dog");
+  }
+}
+const cat = new Pet("Mia", "Cat")
+cat.speak() // logs 'the pet speaks'
+
+const doggo = new Dog("Charlie", "Big")
+doggo.speak() // logs 'I am a dog'
+```
+
+Score: 2/3
